--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-gravatar": "^1.0.2",
+    "react-navigation": "^2.17.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
